Extremely slow preview icon loading #66262

Closed
opened 2019-06-30 03:47:12 +02:00 by Amir Shehata · 12 comments

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.48

Blender Version
Broken: version: 2.80 (sub 74), branch: test, commit date: 2019-06-30 01:41, hash: 9656ad91a3
Worked: (optional)

Short description of error
Loading preview collections is extremely slow.

Exact steps for others to reproduce the error
Any add-on which uses preview_collections to load previews grinds to a halt. I've tried Extreme PBR2.0 and Easy HDRI. I reverted the following two patches and the problem seemed to go away:

9656ad91a39e496ce15233d049dccdf6721a89c2 (HEAD -> test) Revert "Previews: delay icon preview renders a bit for smoother interaction"
390ca39cc50b506c49db23f33efa21be570f6ed9 Revert "Fix #66230: delay in the material preview panel after recent changes"

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.48 **Blender Version** Broken: version: 2.80 (sub 74), branch: test, commit date: 2019-06-30 01:41, hash: `9656ad91a3` Worked: (optional) **Short description of error** Loading preview collections is extremely slow. **Exact steps for others to reproduce the error** Any add-on which uses preview_collections to load previews grinds to a halt. I've tried Extreme PBR2.0 and Easy HDRI. I reverted the following two patches and the problem seemed to go away: 9656ad91a39e496ce15233d049dccdf6721a89c2 (HEAD -> test) Revert "Previews: delay icon preview renders a bit for smoother interaction" 390ca39cc50b506c49db23f33efa21be570f6ed9 Revert "Fix #66230: delay in the material preview panel after recent changes"
Author

Added subscriber: @AmirShehata

Added subscriber: @AmirShehata

#66298 was marked as duplicate of this issue

#66298 was marked as duplicate of this issue

Added subscriber: @Aranuvir

Added subscriber: @Aranuvir

I got the same problem. (OS is Ubuntu 18.04.2 x86_64 with KDE, hwe kernel is 4.18.0-25-generic. System is an Intel 4800MQ, additional GPU AMD M8970).

Running blender --debug-all and then loading kit ops from the "N"-panel, I get the following messages:

  UI_menutype_draw: opening menu "TOPBAR_MT_editor_menus"
  UI_menutype_draw: opening menu "TIME_MT_editor_menus"
  UI_menutype_draw: opening menu "VIEW3D_MT_editor_menus"
  Job 'Icon Preview' finished in 2.003133 seconds
I got the same problem. (OS is Ubuntu 18.04.2 x86_64 with KDE, hwe kernel is 4.18.0-25-generic. System is an Intel 4800MQ, additional GPU AMD M8970). Running blender --debug-all and then loading kit ops from the "N"-panel, I get the following messages: ``` UI_menutype_draw: opening menu "TOPBAR_MT_editor_menus" UI_menutype_draw: opening menu "TIME_MT_editor_menus" UI_menutype_draw: opening menu "VIEW3D_MT_editor_menus" Job 'Icon Preview' finished in 2.003133 seconds
Author

Just to clarify in my case what I see is that some icons are not displayed at all.

Just to clarify in my case what I see is that some icons are not displayed at all.
Member

Added subscriber: @CansecoGPC

Added subscriber: @CansecoGPC
Member

I can reproduce this bug too.
(Operating system: Linux-5.1.15-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26, Blender 2.80.74, hash: e40f3f5c48)
Happens with previews and external icons, 4-5 seconds to show each preview, in some addons like TexTools, each icon takes 10 or more seconds to show up.

I can reproduce this bug too. (Operating system: Linux-5.1.15-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26, Blender 2.80.74, hash: `e40f3f5c48`) Happens with previews and external icons, 4-5 seconds to show each preview, in some addons like TexTools, each icon takes 10 or more seconds to show up.
Brecht Van Lommel self-assigned this 2019-06-30 23:08:11 +02:00

Added subscriber: @Pinus

Added subscriber: @Pinus

Same problem with DecalMachine Addon.
After pressing D it takes 5 minutes to see the preview-icons...

System Information
Operating system: Linux Mint Cin. 18.3 64bit

Graphics card: Nvidia 660GTX

Blender Version
Broken: 2.80 (sub 74), branch: master, commit date: 2019-06-29 14:01, hash: f566212aa2, type: Release
build date: 2019-06-29, 16:14:14
Worked: (optional)

Same problem with DecalMachine Addon. After pressing D it takes 5 minutes to see the preview-icons... System Information Operating system: Linux Mint Cin. 18.3 64bit Graphics card: Nvidia 660GTX Blender Version Broken: 2.80 (sub 74), branch: master, commit date: 2019-06-29 14:01, hash: f566212aa237, type: Release build date: 2019-06-29, 16:14:14 Worked: (optional)

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Brecht Van Lommel changed title from Extremely slow loading to Extremely slow preview icon loading 2019-07-01 12:34:59 +02:00

This issue was referenced by 2698544db2

This issue was referenced by 2698544db2a19436155191608e4ef13c001b8209

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66262
No description provided.