Fix T66262: slow preview icon loading