source/blender/windowmanager/WM_api.h
@@ -649,7 +649,6 @@ enum {
   WM_JOB_PRIORITY = (1 << 0),
   WM_JOB_EXCL_RENDER = (1 << 1),
   WM_JOB_PROGRESS = (1 << 2),
-  WM_JOB_SUSPEND = (1 << 3),
 };
 
 /** Identifying jobs by owner alone is unreliable, this isnt saved,
@@ -700,6 +699,7 @@ bool WM_jobs_is_stopped(wmWindowManager *wm, void *owner);
 void *WM_jobs_customdata_get(struct wmJob *);
 void WM_jobs_customdata_set(struct wmJob *, void *customdata, void (*free)(void *));
 void WM_jobs_timer(struct wmJob *, double timestep, unsigned int note, unsigned int endnote);
+void WM_jobs_delay_start(struct wmJob *, double delay_time);
 void WM_jobs_callbacks(struct wmJob *,
                        void (*startjob)(void *, short *, short *, float *),
                        void (*initjob)(void *),
